# linux-airpods-cli

./: .gitignore  Cargo.toml  README.md  pyproject.toml
contrib/systemd/: airpods-monitor.service.example
src/: aap.rs  lib.rs  main.rs
src/linux_airpods_cli/: aap.py  main.py
tests/: test_main.py
