[package]
name = "linux-airpods-cli"
version = "0.1.0"
edition = "2024"
description = "A small AirPods CLI for Linux using BlueZ and PipeWire"
license = "MIT"
repository = "https://github.com/1jehuang/linux-airpods-cli"

[[bin]]
name = "airpods"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
hex-literal = "1.0"
libc = "0.2"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.13"
wait-timeout = "0.2"
which = "8.0"
