[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-airpods-cli"
version = "0.1.0"
description = "A small AirPods CLI for Linux using BlueZ and PipeWire"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jeremy Huang" }
]
keywords = ["airpods", "linux", "bluetooth", "pipewire", "bluez", "cli"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: System :: Hardware :: Hardware Drivers"
]

[project.scripts]
airpods = "linux_airpods_cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
